--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,8 +1,8 @@
 $body-bg:rgb(0, 0, 0);
 $info: rgb(59, 245, 242);
 
-@import "../node_modules/bootstrap/scss/bootstrap";
- 
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
 @media (min-width: 992px){
     .navbar-collapse{
         padding-left: 20rem;
